tests/invalid/invalid-011.inox
Module Invalid011

Main() :
    var X := 'A'
    X := "abc"
;
